--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,18 @@
         "userProfile": "User profile",
         "logout": "Logout"
     },
+
+    "profile": {
+        "title": "User Profile",
+        "name": "Name",
+        "email": "Email",
+        "role": "Role",
+        "password": "Password",
+        "editProfile": "Edit Profile",
+        "successUpdate": "Profile updated successfully",
+        "errorUpdate": "Failed to update profile"
+    },
+
     "menu": {
         "dashboard": "Dashboard",
         "profile": "My Profile",
