feat(evaluations): fixed the problem of adding evaluations to events.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,10 +1,19 @@
-{    "evaluations": {
+{   "evaluations": {
     "title": "Evaluations",
     "filters": {
         "all": "All",
         "done": "Completed",
         "pending": "Pending"
     },
+
+    "evaluationDetail": {
+        "rateVenue": "Califica el local",
+        "commentPlaceholder": "Escribe un comentario sobre el local...",
+        "ratingSuccess": "¡Calificación enviada con éxito!",
+        "ratingError": "Error al enviar la calificación.",
+        "errorLoading": "Error al cargar la evaluación."
+    },
+
     "writePlaceholder": "Evaluate your experience at {event}",
     "rating": "Rating",
     "comment": "Comment",
